--- a/pages/index.html
+++ b/pages/index.html
@@ -28,7 +28,7 @@
       <ul>
         {{range .Metrics}}
         <li>
-          <a href="/metrics/{{.ID}}">{{.Name}}</a>
+          <a href="/{{.ID}}">{{.Name}}</a>
         </li>
         {{end}}
       </ul>
