--- a/pages/source.html
+++ b/pages/source.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{.Source.Metric}} Specification | Weekcase Metrics Library</title>
+  <title>{{.Source.Source}} / {{.Source.Metric}} Specification | Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/assets/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
