--- a/pages/index.html
+++ b/pages/index.html
@@ -4,11 +4,28 @@
   <meta charset="UTF-8">
   <title>Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Weekcase Metric Library">
+  <meta name="theme-color" content="#101B3A">
+  <meta name="description" content="An open-source library of standardized key business metrics with clear definitions and source specifications.">
+  
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://metrics.weekcase.net/">
+  <meta property="og:title" content="Weekcase Metrics Library">
+  <meta property="og:description" content="An open-source library of standardized key business metrics with clear definitions and source specifications.">
+  <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://metrics.weekcase.net/">
+  <meta property="twitter:title" content="Weekcase Metrics Library">
+  <meta property="twitter:description" content="An open-source library of standardized key business metrics with clear definitions and source specifications.">
+  <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
+
   <link rel="icon" type="image/png" href="/assets/favicon.png">
+  <link rel="canonical" href="https://metrics.weekcase.net/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
@@ -22,7 +39,7 @@
         WML exists to reduce ambiguity around common business metrics by providing a stable, versioned viewpoint, enabling consistent reporting and analysis across different tools, platforms, and teams.
       </p>
       <p>
-        Weekcase is developed and maintained by <a href="https://weekcase.net" target="_blank" rel="noopener noreferrer">Weekcase</a>, a company building trusted business metrics infrastructure.
+        Weekcase Metrics Library is developed and maintained by <a href="https://weekcase.net" target="_blank" rel="noopener noreferrer">Weekcase</a>, a company building trusted business metrics infrastructure.
       </p>
       <h2>Metrics</h2>
       <ul>
@@ -35,7 +52,7 @@
     </div>
   </main>
   <footer>
-    Copyright © 2025 Weekcase. Licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0.txt">Apache 2.0</a>.
+    Copyright © 2025 Weekcase. Licensed under <a href="https://www.apache.org/licenses/LICENSE-2.0.txt" target="_blank" rel="noopener noreferrer">Apache 2.0</a>.
   </footer>
 </body>
 </html>
