--- a/pages/source.html
+++ b/pages/source.html
@@ -2,9 +2,27 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{.Source.Source}} / {{.Source.Metric}} Specification | Weekcase Metrics Library</title>
+  <title>{{.Source.Source}} - {{.Source.Metric}} | WML</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#101B3A">
+  <meta name="description" content="{{.Source.Source}} source specification for {{.Source.Metric}}">
+  
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://metrics.weekcase.net/{{.MetricID}}/{{.SourceID}}">
+  <meta property="og:title" content="{{.Source.Source}} - {{.Source.Metric}}">
+  <meta property="og:description" content="Source specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
+  <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary">
+  <meta property="twitter:url" content="https://metrics.weekcase.net/{{.MetricID}}/{{.SourceID}}">
+  <meta property="twitter:title" content="{{.Source.Source}} - {{.Source.Metric}}">
+  <meta property="twitter:description" content="Source specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
+  <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
+
   <link rel="icon" type="image/png" href="/assets/favicon.png">
+  <link rel="canonical" href="https://metrics.weekcase.net/{{.MetricID}}/{{.SourceID}}">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300&display=swap" rel="stylesheet">
