--- a/pages/index.html
+++ b/pages/index.html
@@ -31,9 +31,9 @@
 <body>
   <main>
     <div class="center-content">
-      <h1>Weekcase Metric Library</h1>
+      <h1>Weekcase Metrics Library</h1>
       <p>
-        Weekcase Metric Library (WML) is an <a href="https://github.com/weekcase/metrics" target="_blank" rel="noopener noreferrer">open-source library</a> of standardized key business metrics. WML includes clear, unambiguous definitions for selected metrics, and specifications on how to extract them from selected systems.
+        Weekcase Metrics Library (WML) is an <a href="https://github.com/weekcase/metrics" target="_blank" rel="noopener noreferrer">open-source library</a> of standardized key business metrics. WML includes clear, unambiguous definitions for selected metrics, and specifications on how to extract them from selected systems.
       </p>
       <p>
         WML exists to reduce ambiguity around common business metrics by providing a stable, versioned viewpoint, enabling consistent reporting and analysis across different tools, platforms, and teams.
