Cleaned html head

--- a/pages/source.html
+++ b/pages/source.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{.Source.Source}} - {{.Source.Metric}} | WML</title>
+  <title>{{.Source.Source}} / {{.Source.Metric}} Specification | Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#101B3A">
-  <meta name="description" content="{{.Source.Source}} source specification for {{.Source.Metric}}">
+  <meta name="description" content="Source specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
   
   <!-- Open Graph -->
   <meta property="og:type" content="article">
