--- a/pages/index.html
+++ b/pages/index.html
@@ -5,20 +5,20 @@
   <title>Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#101B3A">
-  <meta name="description" content="An open-source library of standardized key business metrics with clear definitions and source specifications.">
+  <meta name="description" content="An open-source library of standardized key business metrics. It includes clear, versioned definitions and extraction specifications for key data sources.">
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://metrics.weekcase.net/">
   <meta property="og:title" content="Weekcase Metrics Library">
-  <meta property="og:description" content="An open-source library of standardized key business metrics with clear definitions and source specifications.">
+  <meta property="og:description" content="An open-source library of standardized key business metrics. It includes clear, versioned definitions and extraction specifications for key data sources.">
   <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://metrics.weekcase.net/">
   <meta property="twitter:title" content="Weekcase Metrics Library">
-  <meta property="twitter:description" content="An open-source library of standardized key business metrics with clear definitions and source specifications.">
+  <meta property="twitter:description" content="An open-source library of standardized key business metrics. It includes clear, versioned definitions and extraction specifications for key data sources.">
   <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <link rel="icon" type="image/png" href="/assets/favicon.png">
