--- a/pages/metric.html
+++ b/pages/metric.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{.Metric.Name}} ({{.Metric.Abbreviation}}) | WML</title>
+  <title>{{.Metric.Name}} Definition | Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#101B3A">
-  <meta name="description" content="{{.Metric.Definition}}">
+  <meta name="description" content="Definition. {{.Metric.Definition}}">
   
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://metrics.weekcase.net/{{.Metric.ID}}">
   <meta property="og:title" content="{{.Metric.Name}} ({{.Metric.Abbreviation}})">
-  <meta property="og:description" content="{{.Metric.Definition}}">
+  <meta property="og:description" content="Definition. {{.Metric.Definition}}">
   <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary">
   <meta property="twitter:url" content="https://metrics.weekcase.net/{{.Metric.ID}}">
   <meta property="twitter:title" content="{{.Metric.Name}} ({{.Metric.Abbreviation}})">
-  <meta property="twitter:description" content="{{.Metric.Definition}}">
+  <meta property="twitter:description" content="Definition. {{.Metric.Definition}}">
   <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <link rel="icon" type="image/png" href="/assets/favicon.png">
