Cleaned meta tags

--- a/pages/metric.html
+++ b/pages/metric.html
@@ -10,15 +10,15 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://metrics.weekcase.net/{{.Metric.ID}}">
-  <meta property="og:title" content="{{.Metric.Name}} ({{.Metric.Abbreviation}})">
-  <meta property="og:description" content="Definition. {{.Metric.Definition}}">
+  <meta property="og:title" content="{{.Metric.Name}} Definition">
+  <meta property="og:description" content="{{.Metric.Definition}}">
   <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary">
   <meta property="twitter:url" content="https://metrics.weekcase.net/{{.Metric.ID}}">
-  <meta property="twitter:title" content="{{.Metric.Name}} ({{.Metric.Abbreviation}})">
-  <meta property="twitter:description" content="Definition. {{.Metric.Definition}}">
+  <meta property="twitter:title" content="{{.Metric.Name}} Definition">
+  <meta property="twitter:description" content="{{.Metric.Definition}}">
   <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <link rel="icon" type="image/png" href="/assets/favicon.png">
