--- a/pages/source.html
+++ b/pages/source.html
@@ -5,20 +5,20 @@
   <title>{{.Source.Source}} / {{.Source.Metric}} Specification | Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#101B3A">
-  <meta name="description" content="Source specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
+  <meta name="description" content="Specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
   
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://metrics.weekcase.net/{{.MetricID}}/{{.SourceID}}">
-  <meta property="og:title" content="{{.Source.Source}} - {{.Source.Metric}}">
-  <meta property="og:description" content="Source specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
+  <meta property="og:title" content="{{.Source.Source}} / {{.Source.Metric}}">
+  <meta property="og:description" content="Specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
   <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary">
   <meta property="twitter:url" content="https://metrics.weekcase.net/{{.MetricID}}/{{.SourceID}}">
-  <meta property="twitter:title" content="{{.Source.Source}} - {{.Source.Metric}}">
-  <meta property="twitter:description" content="Source specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
+  <meta property="twitter:title" content="{{.Source.Source}} / {{.Source.Metric}}">
+  <meta property="twitter:description" content="Specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
   <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <link rel="icon" type="image/png" href="/assets/favicon.png">
