--- a/pages/source.html
+++ b/pages/source.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{{.Source.Source}} / {{.Source.Metric}} Specification | Weekcase Metrics Library</title>
+  <title>Specification: {{.Source.Source}} / {{.Source.Metric}} | Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#101B3A">
   <meta name="description" content="Specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
@@ -10,14 +10,14 @@
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://metrics.weekcase.net/{{.MetricID}}/{{.SourceID}}">
-  <meta property="og:title" content="{{.Source.Source}} / {{.Source.Metric}}">
+  <meta property="og:title" content="Specification: {{.Source.Source}} / {{.Source.Metric}}">
   <meta property="og:description" content="Specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
   <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary">
   <meta property="twitter:url" content="https://metrics.weekcase.net/{{.MetricID}}/{{.SourceID}}">
-  <meta property="twitter:title" content="{{.Source.Source}} / {{.Source.Metric}}">
+  <meta property="twitter:title" content="Specification: {{.Source.Source}} / {{.Source.Metric}}">
   <meta property="twitter:description" content="Specification for extracting {{.Source.Metric}} from {{.Source.Source}}">
   <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
