--- a/pages/metric.html
+++ b/pages/metric.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Definition: {{.Metric.Name}} | Weekcase Metrics Library</title>
+  <title>{{.Metric.Name}} | Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#101B3A">
-  <meta name="description" content="Definition. {{.Metric.Definition}}">
+  <meta name="description" content="{{.Metric.Definition}}">
   
   <!-- Open Graph -->
   <meta property="og:type" content="article">
   <meta property="og:url" content="https://metrics.weekcase.net/{{.Metric.ID}}">
-  <meta property="og:title" content="Definition: {{.Metric.Name}}">
+  <meta property="og:title" content="Definition for {{.Metric.Name}}">
   <meta property="og:description" content="{{.Metric.Definition}}">
   <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary">
   <meta property="twitter:url" content="https://metrics.weekcase.net/{{.Metric.ID}}">
-  <meta property="twitter:title" content="Definition: {{.Metric.Name}}">
+  <meta property="twitter:title" content="Definition for {{.Metric.Name}}">
   <meta property="twitter:description" content="{{.Metric.Definition}}">
   <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
