--- a/pages/source.html
+++ b/pages/source.html
@@ -33,7 +33,7 @@
     <div class="center-content">
       [<a href="/">Index</a>]
 
-      <h2>{{.Source.Source}} / {{.Source.Metric}}</h2>
+      <h2>{{.Source.Metric}} and {{.Source.Source}}</h2>
 
       <h3># URL</h3>
       <p>{{.Source.URL}}</p>
