--- a/pages/index.html
+++ b/pages/index.html
@@ -5,20 +5,20 @@
   <title>Weekcase Metrics Library</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#101B3A">
-  <meta name="description" content="An open-source library of standardized key business metrics. It includes clear, versioned definitions and extraction specifications for key data sources.">
+  <meta name="description" content="Weekcase Metrics Library is an open-source collection of standardized key business metrics. It provides clear, versioned definitions for metrics, and includes extraction specifications for different data sources.">
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://metrics.weekcase.net/">
   <meta property="og:title" content="Weekcase Metrics Library">
-  <meta property="og:description" content="An open-source library of standardized key business metrics. It includes clear, versioned definitions and extraction specifications for key data sources.">
+  <meta property="og:description" content="Weekcase Metrics Library is an open-source collection of standardized key business metrics. It provides clear, versioned definitions for metrics, and includes extraction specifications for different data sources.">
   <meta property="og:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://metrics.weekcase.net/">
   <meta property="twitter:title" content="Weekcase Metrics Library">
-  <meta property="twitter:description" content="An open-source library of standardized key business metrics. It includes clear, versioned definitions and extraction specifications for key data sources.">
+  <meta property="twitter:description" content="Weekcase Metrics Library is an open-source collection of standardized key business metrics. It provides clear, versioned definitions for metrics, and includes extraction specifications for different data sources.">
   <meta property="twitter:image" content="https://metrics.weekcase.net/assets/og-image.png">
 
   <link rel="icon" type="image/png" href="/assets/favicon.png">
@@ -33,13 +33,13 @@
     <div class="center-content">
       <h1>Weekcase Metrics Library</h1>
       <p>
-        Weekcase Metrics Library (WML) is an <a href="https://github.com/weekcase/metrics" target="_blank" rel="noopener noreferrer">open-source library</a> of standardized key business metrics. WML includes clear, unambiguous definitions for selected metrics, and specifications on how to extract them from selected systems.
+        Weekcase Metrics Library is an <a href="https://github.com/weekcase/metrics" target="_blank" rel="noopener noreferrer">open-source</a> collection of standardized key business metrics. It provides clear, versioned definitions for metrics, and includes extraction specifications for different data sources.
       </p>
       <p>
-        WML exists to reduce ambiguity around common business metrics by providing a stable, versioned viewpoint, enabling consistent reporting and analysis across different tools, platforms, and teams.
+        Weekcase Metrics Library (WML) exists to reduce ambiguity around common business metrics by providing a stable, trusted viewpoint for consistent reporting across tools and teams.
       </p>
       <p>
-        Weekcase Metrics Library is developed and maintained by <a href="https://weekcase.net" target="_blank" rel="noopener noreferrer">Weekcase</a>, a company building trusted business metrics infrastructure.
+        WML is developed and maintained by <a href="https://weekcase.net" target="_blank" rel="noopener noreferrer">Weekcase</a>, a company building trusted business metrics infrastructure.
       </p>
       <h2>Metrics</h2>
       <ul>
