--- a/pages/metric.html
+++ b/pages/metric.html
@@ -64,7 +64,7 @@
       </ul>
       {{end}}
 
-      <h3># Version</h3>
+      <h3># Definition Version</h3>
       <p>{{.Metric.Version}}</p>
     </div>
   </main>
