--- a/pages/source.html
+++ b/pages/source.html
@@ -59,7 +59,7 @@
       <p><em>currency:</em></p>
       <p>{{.Source.Normalization.Currency}}</p>
 
-      <h3># Version</h3>
+      <h3># Specification Version</h3>
       <p>{{.Source.Version}}</p>
     </div>
   </main>
